# TA_MC-0325_MCP

./: .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml
db/init/: init.sql
docker/db/: Dockerfile
docker/mcp/: Dockerfile
scripts/: run-mcp-local.sh
src/: mcp_client.py  mcp_server.py
